syntax = "proto3";
package airmap.core.aerial_traffic;

import public "google/protobuf/wrappers.proto";

option go_package="legacy";

service SkyGuideCollector {
    rpc IngestTelemetry(stream SkyGuideUpdate) returns (SGEmpty);
    rpc IngestTelemetryWithAck(stream SkyGuideUpdate) returns (stream Ack);
}

message SkyGuideUpdate {
    // ISO8601 datetime: "2017-06-15T06:00:05.394Z"
    string submitted_time = 12;

    // ISO8601 datetime: "2017-06-15T06:00:05.394Z"
    string observed_time = 1;

    // aircraft callsign
    string callsign = 2;

    // ICAO 24-bit hex identifier
    string icao24 = 11;

    // track identifier
    string track_nb = 3;

    // mode S identifier.
    string mode_s = 4;

    // feet relative to MSL.
    google.protobuf.Int32Value altitude_msl = 5;

    // Latitude in form: "46:49:14.694"
    string latitude = 6;

    // Longitude in form: "08:10:45.457"
    string longitude = 7;

    // knots
    google.protobuf.FloatValue ground_speed_kts = 8;

    // Course over ground relative to True North, 0-359
    google.protobuf.FloatValue true_course = 9;

    // signal type
    enum SignalType {
        PRIMARY = 0;
        SECONDARY = 1;
        BOTH = 2;
    }
    SignalType signal_type = 10;

}

message SGEmpty {

}

message Ack {
    int64 message_count = 1;
    string submitted_time = 2;
}