// Copyright 2018 AirMap, Inc.  All rights reserved.

syntax = "proto3";

package airmap;

option swift_prefix="AirMap";

// Degrees models a quantity in [°].
message Degrees {
  double value = 1;  // The value of the quantity.
}

// Celsius models a quantity in [°C].
message Celsius {
  double value = 1;  // The value of the quantity.
}

// Meters models a quantity in meters.
message Meters {
  double value = 1;  // The value of the quantity.
}

// Foot models a quantity in feet.
message Foot {
  double value = 1;  // The value of the quantity.
}

// MetersPerSecond models a quantity in [m/s].
message MetersPerSecond {
  double value = 1;  // The value of the quantity.
}

// Pascal models a quantity in [Pa].
message Pascal {
  double value = 1;  // The value of the quantity.
}

// Percent models a quantity in [%].
message Percent {
  double value = 1;  // The value of the quantity.
}
